# hangman

./: .gitignore  LICENSE  README.md  hangman.cabal
src/: Hello.hs  Main.hs
