name:                hangman
version:             0.1.0.0
synopsis:            A simple hangman game
license:             MIT
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
copyright:           2015-2016
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -O2 -Wall -fwarn-tabs
  build-depends:
    base >=4.8 && <4.9,
    random == 1.1,
    split == 0.2.2

